syntax = "proto3";

enum EffortLevel {
    DEFAULT = 0;
    LOW = 1;
    MEDIUM = 2;
    HIGH = 3;
}

// Module execution information
message ModuleDefinition {
    int32 order = 1;
    string name = 2;
    int32 param_id = 3;
    EffortLevel effort = 4;
}

// Define a message type for pipeline configuration
message PipelineDefinition {
    repeated ModuleDefinition modules = 1;
}